--- a/src/App.css
+++ b/src/App.css
@@ -49,25 +49,24 @@
 .cursorEdit:hover {
   color: red; }
 
-  .close-button{
+.close-button {
   position: relative;
-  top: 10px;
+  top: 20px;
   left: 300px;
-  display:block;
-  box-sizing:border-box;
-  width:20px;
-  height:20px;
-  border-width:3px;
+  display: block;
+  box-sizing: border-box;
+  width: 20px;
+  height: 20px;
+  border-width: 3px;
   border-style: solid;
-  border-color:red;
-  border-radius:100%;
-  background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 46%, white 46%,  white 56%,transparent 56%, transparent 100%), -webkit-linear-gradient(45deg, transparent 0%, transparent 46%, white 46%,  white 56%,transparent 56%, transparent 100%);
-  background-color:red;
-  box-shadow:0px 0px 5px 2px rgba(0,0,0,0.5);
-  transition: all 0.3s ease;
-  }
-  .close-button:hover {
-    background-color:black;
-    border-color:black;
-    cursor: pointer;
-  }
+  border-color: red;
+  border-radius: 100%;
+  background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 46%, white 46%, white 56%, transparent 56%, transparent 100%), -webkit-linear-gradient(45deg, transparent 0%, transparent 46%, white 46%, white 56%, transparent 56%, transparent 100%);
+  background-color: red;
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease; }
+
+.close-button:hover {
+  background-color: black;
+  border-color: black;
+  cursor: pointer; }
