--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,7 @@
 @import './base/base';
-@import './components/noteswrapper';
-@import './components/tooltips';
+@import './components/semanticicons';
+@import './components/sidenav';
+@import './components/notestyling';
+@import './components/form';
+
 
