--- a/src/App.scss
+++ b/src/App.scss
@@ -1,73 +1,12 @@
-
-
-/* The sidebar menu */
-.sidenav {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 60px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background-color: #111; /* Black */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
-}
-
-/* The navigation menu links */
-.sidenav p {
-  padding: 1px 1px 1px 1px;
-  text-decoration: none;
-  font-size: 15px;
-  color:white;
-  display: block;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav p:hover {
-  color: lightgrey;
-  cursor: pointer;
-}
-
-/* Style page content */
+/* Main page content */
 .main {
-  margin-left: 160px; /* Same as the width of the sidebar */
-  padding: 0px 10px;
+  margin-left: 50px; /* Same as the width of the sidebar */
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
 
-.cursorEdit{ 
-	cursor: pointer
-}
 
-.cursorEdit:hover {
-	color: red
-}
 
-.close-button{
-  position: relative;
-  top: 20px;
-  left: 300px;
-  display:block;
-  box-sizing:border-box;
-  width:20px;
-  height:20px;
-  border-width:3px;
-  border-style: solid;
-  border-color:red;
-  border-radius:100%;
-  background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 46%, white 46%,  white 56%,transparent 56%, transparent 100%), -webkit-linear-gradient(45deg, transparent 0%, transparent 46%, white 46%,  white 56%,transparent 56%, transparent 100%);
-  background-color:red;
-  box-shadow:0px 0px 5px 2px rgba(0,0,0,0.5);
-  transition: all 0.3s ease;
-  }
 
-  .close-button:hover {
-    background-color:black;
-    border-color:black;
-    cursor: pointer;
-  }
+
+
+
